fix coolvetica not showing on iphone

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p {
 
 @font-face {
     font-family: 'Coolvetica';
-    src: url('assets/fonts/Coolvetica.ttf');
+    src: url('assets/fonts/Coolvetica.ttf') format('openType');
 }
 
 @font-face {
